# FOTA_Connect

./: .gitignore  CMakeLists.txt  README.md  firmware_list.json
config/: firmwareListConfig.json
src/: main.cpp  tung.cpp
src/cloudUrl/: CMakeLists.txt  cloudUrl.cpp  cloudUrl.h
src/conf/: firebase.json  firebaseConfig.json  firmware_list.json  tokenConfig.json
src/firmwareList/: firmware_list.json
src/fotaDownload/: CMakeLists.txt  fotaDownload.cpp  fotaDownload.h
src/fota_connect_app/: CMakeLists.txt  fota_connect_app.cpp  fota_connect_app.h
src/jsonKey/: CMakeLists.txt  jsonKey.cpp  jsonKey.h
src/restAdapter/: CMakeLists.txt  restAdapter.cpp  restAdapter.h
src/verification/: CMakeLists.txt  verification.cpp  verification.h
